--- a/debian/control
+++ b/debian/control
@@ -8,12 +8,8 @@ Standards-Version: 3.6.1
 
 Package: libxml-api-perl
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, 
-Description:  Perl extension for blah blah blah
- Stub documentation for XML::API, created by h2xs. It looks like the
- author of the extension was negligent enough to leave the stub
- unedited.
- .
- Blah blah blah.
- .
- This description was automagically extracted from the module by dh-make-perl.
+Depends: ${perl:Depends}, ${misc:Depends}, libxml-parser-perl
+Description:  XML::API - Perl extension for creating XML documents
+ XML::API is a class for creating XML documents using object method
+ calls. This class is meant for generating XML programatically and not
+ for reading or parsing it.
