Import of MLAWREN/XML-API-0.14 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.14
gitpan-cpan-path:         MLAWREN/XML-API-0.14.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/debian/rules
+++ b/debian/rules
@@ -71,7 +71,7 @@ binary-indep: build install
 #	dh_installcron
 #	dh_installmenu
 #	dh_installexamples
-	dh_installdocs README
+	dh_installdocs README example
 	dh_installchangelogs Changes
 	dh_perl
 	dh_link
