Import of MLAWREN/XML-API-0.18 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.18
gitpan-cpan-path:         MLAWREN/XML-API-0.18.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -14,6 +14,9 @@ no_index:
   directory: 
     - inc
     - t
+  package: 
+    - XML::API::Element
+    - XML::API::SAXHandler
 requires: 
   XML::SAX: 0
-version: 0.17
+version: 0.18
