Import of MLAWREN/XML-API-0.19 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.19
gitpan-cpan-path:         MLAWREN/XML-API-0.19.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,5 +18,6 @@ no_index:
     - XML::API::Element
     - XML::API::SAXHandler
 requires: 
+  Scalar::Util: 0
   XML::SAX: 0
-version: 0.18
+version: 0.19
