Import of MLAWREN/XML-API-0.20 from CPAN.
gitpan-cpan-distribution: XML-API
gitpan-cpan-version:      0.20
gitpan-cpan-path:         MLAWREN/XML-API-0.20.tar.gz
gitpan-cpan-author:       MLAWREN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,5 +19,6 @@ no_index:
     - XML::API::SAXHandler
 requires: 
   Scalar::Util: 0
+  XML::LibXML::SAX: 0
   XML::SAX: 0
-version: 0.19
+version: 0.20
