--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,7 @@
 abstract: Perl extension for writing XML
 author: Mark Lawrence <nomad@null.net>
 build_requires: 
+  File::Slurp: 0
   Test::Exception: 0
   Test::Memory::Cycle: 0
   Test::More: 0.42
@@ -21,4 +22,4 @@ requires:
   Scalar::Util: 0
   XML::LibXML::SAX: 0
   XML::SAX: 0
-version: 0.22
+version: 0.23
